@@ -1,3 +1,7 @@
+2016-07-06         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* awk.h: Renumber flags to remove gap created when FIELD was removed.
+
 2016-07-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* field.c (rebuild_record): Need to set MALLOC flag if we allocate
